assets/styles/shared.css
*,
::before,
::after {
    box-sizing: border-box;
}

/* 
    Some users may disable javascript, and we may have elements of a
    page that only make sense to show when javascript is enabled. These
    elements should be hidden by default, and then shown using javascript.
 */

.js_enabled_only {
    display: none !important;
}

/*
    Setup a palette to be re-used trhoughout the site.
 */

:root {
    --background-color: black;
    --text-color: rgb(226, 226, 226);
    --text-mute-color: rgb(145, 145, 145);
    --accent-text-color: rgb(244, 244, 244);
    --accent-color: rgb(19, 41, 68);
    --alt-background-color: rgb(22, 22, 22);
    --alt-background-color-emphasised: rgb(18, 18, 18);
    /* To be used e.g. opacity: var(--translucent-light) */
    --translucent-light: 0.28;
    --translucent-medium: 0.47;
    --translucent-heavy: 0.9;
    /* Same for both colour schemes */
    --link-color: rgb(79, 119, 168);
    --link-hover-color: rgb(89, 130, 181);
}

/* 
Some users may have a preference for a light theme, and we should
respect that preference. We can use the prefers-color-scheme media
query to detect this preference and adjust our styles accordingly.
*/

@media (prefers-color-scheme: light) {
    :root {
        --background-color: white;
        --text-color: rgb(29, 29, 29);
        --text-mute-color: rgb(110, 110, 110);
        --accent-text-color: rgb(10, 10, 10);
        --accent-color: rgb(236, 214, 187);
        --alt-background-color: rgb(233, 233, 233);
        --alt-background-color-emphasised: rgb(237, 237, 237);
    }
}

body {
    margin: 0;
    background-color: var(--background-color);
    color: var(--text-color);
    font-family: "Lusitana", Georgia, serif;
    width: 100%;
    min-width: 250px;
    display: block;
    justify-content: space-around;
}

h1 {
    font-family: "Lato", arial, sans-serif;
    text-align: center;
    font-weight: normal;
    font-size: 52px;
    text-transform: uppercase;
    letter-spacing: 1px;
    border-bottom: solid 1px;
}

h2 {
    font-family: "Lato", arial, sans-serif;
    text-align: left;
    font-weight: normal;
    font-size: 24px;
    font-weight: 400;
    margin-bottom: 30px;
    text-transform: uppercase;
    overflow-wrap: break-word;
    padding-bottom: 10px;
    border-bottom: solid 1px;
}

h3 {
    text-align: center;
    font-weight: normal;
    font-size: 24px;
    font-weight: 400;
    margin-bottom: 20px;
    overflow-wrap: break-word;
    line-height: 1.25;
}

h4 {
    text-align: center;
    font-weight: normal;
    font-size: 22px;
    margin-bottom: 20px;
    overflow-wrap: break-word;
    line-height: 1.2;
}

hr.section_end {
    width: 100%;
    color: var(--text-color);
    padding-top: 5vh;
    border-top: none;
    border-left: none;
    border-right: none;
}

a {
    color: var(--link-color);
}

a:hover {
    color: var(--link-hover-color);
}

li {
    text-align: left;
}

form {
    display: flex;
    flex-direction: column;
    row-gap: 32px;
    font-family: "Lusitana", Georgia, serif;
    width: 65%;
    min-width: 275px;
    align-self: center;
}

form > input,
textarea {
    background-color: transparent;
    color: var(--accent-text-color);
    font-size: medium;
    padding: 16px;
}

form > button {
    background-color: var(--accent-color);
    color: var(--accent-text-color);
    border-style: none;
    cursor: pointer;
    min-height: 56px;
    padding-right: 32px;
    padding-left: 32px;
    padding-bottom: 8px;
    padding-top: 8px;
    align-items: center;
    font-size: 16px;
    font-family: "Lusitana", Georgia, serif;
    font-weight: 700;
    letter-spacing: 0.063em;
    display: inline-flex;
    justify-content: center;
    text-decoration: underline;
}

/* useful for making images clickable */
a.image_link {
    display: contents;
}

a.image_link > img {
    width: 100%;
    height: auto;
}

.content,
.footer {
    height: 100%;
    width: 95%;
    max-width: 1280px;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.footer_content {
    row-gap: 16px;
    padding: 16px;
    padding-bottom: 5vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.footer_buttons_container {
    display: flex;
    flex-direction: row;
    width: max-content;
}

.over_image {
    text-shadow: 2px 2px var(--background-color);
}

iframe.embedded_youtube {
    width: 100%;
    aspect-ratio: calc(560 / 315);
}

iframe.embedded_godot {
    width: 100%;
    aspect-ratio: calc(560 / 315);
}

.try_it_now {
    display: block;
    color: var(--text-color);
    background-color: var(--alt-background-color);
    width: 100%;
    max-width: 70%;
    height: auto;
    align-self: center;
    padding: 20px;
    text-decoration: none;
}

.try_it_now:hover {
    background-color: var(--alt-background-color-emphasised);
    text-decoration: underline;
}

.try_it_now::after {
    content: "⇩ Download";
    float: right;
    color: var(--link-color);
}

.text,
.text_left,
.small_text {
    color: var(--text-mute-color);
    font-size: 18px;
    text-align: center;
    line-height: 1.4;
}

.text_left {
    text-align: left;
    align-self: flex-start;
}

.small_text {
    font-size: 15px;
}

/*
    Intended for large blocks that span the full width of the page.
*/
.box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    row-gap: 16px;
    column-gap: 16px;
    font-size: 18px;
    padding-bottom: 32px;
}

.box_item {
    margin-bottom: 16px;
}

/*
    Intended for small centered blocks that form a single row but
    reactively spread onto new rows when there is limited space.
*/
.flowbox {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    row-gap: 16px;
    column-gap: 16px;
    font-size: 18px;
    padding: 16px;
}

.flowbox > * {
    flex: 1 1 230px;
    max-width: 270px;
}

/* 
    Intended for sequential blocks of pairs that fill the full width of
    the page. Pairs will reactively collapse to a single column. Use
    .alt class on every other pair for alternating content so when the
    items collapse into a single column, items still alternate.
*/
.pair {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    flex-wrap: wrap;
    column-gap: 32px;
    padding-bottom: 64px;
}

.alt {
    flex-direction: row-reverse;
}

.pair > * {
    flex: 1 1 385px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.pair > .two_thirds {
    flex: 2 1 512px;
}

.pair > .one_third {
    flex: 1 1 280px;
}

/* 
    NOTE THAT ONLY ON FIREFOX DOES THIS WORK
    wrap images in <div><a class="image_link"><img ... ></a></div> instead

.pair > img {
    width: 100%;
    height: auto;
    margin: auto;
}

*/
/* 
    Intended for a grid with reactive column count (3, <-> 2 <-> 1),
    that spans the full width of the page. Add items in multiples of
    three, using use empty divs to fill any gaps (prevents trailing 
    items from expading to fill multiple columns).
*/
.grid {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: center;
    flex-wrap: wrap;
    row-gap: 54px;
    column-gap: 54px;
}

.grid > * {
    flex: 1 1 350px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.grid > * > .text {
    padding-top: 16px;
    padding-bottom: 16px;
}

.more_info_button {
    background-color: var(--accent-color);
    color: var(--accent-text-color);
    cursor: pointer;
    min-height: 56px;
    padding-right: 32px;
    padding-left: 32px;
    padding-bottom: 8px;
    padding-top: 8px;
    align-items: center;
    font-size: 16px;
    display: inline-flex;
    border-style: none;
    justify-content: center;
    text-align: center;
    font-weight: 700;
    letter-spacing: 0.063em;
}

/*
    Intended to be used to allow inline images to be viewed at full size,
    without linking the user to a new page, or opening a new browser tab
*/

.lightbox_toggle {
    display: none;
}

.lightbox {
    display: flex;
    align-items: center;
    justify-content: center;
}

.lightbox > img {
    width: 100%;
    height: auto;
    max-width: 100%;
    cursor: pointer;
}

.lightbox_toggle:checked + .lightbox > img {
    width: auto;
    height: auto;
}

.lightbox_toggle:checked + .lightbox {
    position: fixed;
    float: left;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: var(--background-color);
    z-index: 9998;
    overflow: hidden;
    cursor: pointer;
}

